create post 페이지 만들기

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,7 @@
   },
   "unibeautify.enabled": true,
   "[django-html]": {
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": false,
     "editor.defaultFormatter": "Glavin001.unibeautify-vscode"
   }
 }
