content 입력란에 마크다운 적용하기

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,8 @@
   "[django-html]": {
     "editor.formatOnSave": false,
     "editor.defaultFormatter": "Glavin001.unibeautify-vscode"
-  }
+  },
+  "python.analysis.extraPaths": [
+    "./django-markdownx"
+  ]
 }
