도커에 PostgreSQL 설정 추가하기

--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,9 @@
 DEBUG = 1
-
 SECRET_KEY = "django-insecure-6@lvct6r7j&di8+3%zf%psiqfg5$=k*dlk3j0q_80ff&sio_6j"
-
 DJANGO_ALLOWED_HOSTS = localhost 127.0.0.1 [::1]
+SQL_ENGINE = django.db.backends.postgresql
+SQL_DATABASE = do_it_django_dev
+SQL_USER = do_it_django_user
+SQL_PASSWORD = do_it_django_password
+SQL_HOST = db
+SQL_PORT = 5432
