--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ parso==0.8.3
 pickleshare==0.7.5
 Pillow==9.5.0
 prompt-toolkit==3.0.38
+psycopg2-binary==2.9.7
 pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.15.1
