--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - 8000:8000
     env_file:
-      - ./.env.prod
+      - ./.env.dev
     depends_on:
       - db
   
@@ -18,7 +18,9 @@ services:
     image: postgres:12.0-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    env_file:
-      - ./.env.prod.db
+    environment:
+      - POSTGRES_USER=do_it_django_user
+      - POSTGRES_PASSWORD=do_it_django_password
+      - POSTGRES_DB=do_it_django_dev
 volumes:
   postgres_data:
