--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.2
 asttokens==2.2.1
 backcall==0.2.0
 beautifulsoup4==4.12.2
+bleach==6.0.0
 certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==3.2.0
@@ -15,6 +16,7 @@ django-allauth==0.54.0
 django-crispy-forms==2.0
 django-extensions==3.2.3
 django-markdownx==4.0.2
+django-summernote==0.8.20.0
 executing==1.2.0
 gunicorn==21.2.0
 idna==3.4
@@ -45,3 +47,4 @@ typing_extensions==4.6.3
 tzdata==2023.3
 urllib3==2.0.4
 wcwidth==0.2.6
+webencodings==0.5.1
